[package]
name = "frcw"
version = "0.1.0"
authors = ["Parker J. Rule <parker.rule@tufts.edu>"]
edition = "2018"

[package.metadata.maturin]
python-source = "python_src"

[dependencies]
clap = "2.33.4"
crossbeam-channel = "0.5.0"
crossbeam = "0.8.0"
mimalloc = {version = "0.1.27", default-features=false}
ndarray = { version = "0.14", optional = true }
ndarray-linalg = { version = "0.13", features = ["openblas-system"], optional = true }
pcompress = "1.0.6"
petgraph = "0.6.0"
pyo3 = { version = "0.15.1", features = ["extension-module"] }
rand = { version = "0.8.3", features = ["small_rng"] }
serde = { version = "1.0.64", features = ["derive"] }
serde_json = "1.0.64"
sha3 = "0.10.0"
snafu = "0.7.0"

[dev-dependencies]
rstest = "0.10.0"
criterion = "0.3"
approx = "0.5.0"
test_fixtures = { path = "test_fixtures" }

[features]
# Enables spanning tree statistics (and eventually other features
# that depend on a working BLAS installation).
linalg = ["ndarray", "ndarray-linalg"]

[[bench]]
name = "recom"
harness = false

[profile.dev]
split-debuginfo = "unpacked"
debug = true
opt-level = 3

[profile.release]
debug = false
lto = true
codegen-units = 1
panic = "abort"

[lib]
name = "frcw"
crate-type = ["cdylib", "rlib"]
